refactor banner component

--- a/config/settings.html.liquid
+++ b/config/settings.html.liquid
@@ -36,6 +36,15 @@
         </div>
       </fieldset>
       <fieldset>
+        <legend>Bannière</legend>
+        <div class="row">
+          <div class="columns medium-4 large-3">
+            <label for="color-banner-text">Texte</label>
+            <input name="admin_theme_settings[color-banner-text]" id="color-banner-text" value="{{ theme_settings.color-banner-text }}" type="text" class="minicolors">
+          </div>
+        </div>
+      </fieldset>
+      <fieldset>
         <legend>Formulaires</legend>
         <div class="row">
           <div class="columns medium-4 large-3">
