--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,8 +1,8 @@
-<div class="restaurant-main-image">
+<div class="c-banner" {% if restaurant.main_image? %}style="background-image: url({{ restaurant.main_image | custom_image_url: '1920x480#' }});"{% endif %}>
   {% if restaurant.summary? %}
-    <div class="restaurant-main-image__overlay">
+    <div class="c-banner__overlay">
       <div class="o-wrapper">
-        <div class="restaurant-summary">
+        <div class="c-banner__text">
           {{ restaurant.summary }}
         </div>
       </div>
