--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -5,9 +5,11 @@
     <iframe src='https://ib.guestonline.fr/instabook/bookings/DThKf1O' width='320px' height='450px' frameborder='0' allowTransparency='true' scrolling='yes' ></iframe>
   </div>
 
-  <div class="c-footer__back-to-top">
-    <a class="c-footer__back-to-top-link" href="#top">
-      <span class="back-to-top__label">{{ "Haut de la page" | t }}</span>
+  <div class="c-back-to-top">
+    <a class="c-back-to-top__link" href="#top">
+      <span class="c-back-to-top__label">
+        {{ "Haut de la page" | t }}
+      </span>
     </a>
   </div>
 
