refactor base images styles

--- a/dev/scss/components/_food.scss
+++ b/dev/scss/components/_food.scss
@@ -9,6 +9,7 @@
     @include media-aside;
     margin-right: $gutter / 2;
     vertical-align: middle;
+    border-radius: 50%;
   }
   .food__body {
     @include media-body;
