--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,14 +1,7 @@
-<section class="page-header page-header--page">
+<section class="c-custom-page">
   <div class="o-wrapper">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ page.title }}</h1>
-    </header>
-  </div>
-</section>
-
-<section class="page-body page-body--legal">
-  <div class="o-wrapper">
-    <div class="section__main">
+    <h1 class="c-custom-page__title">{{ page.title }}</h1>
+    <div class="c-custom-page__body">
       {{ page.content }}
     </div>
   </div>
