refactor menu components

--- a/config/settings.html.liquid
+++ b/config/settings.html.liquid
@@ -45,6 +45,15 @@
         </div>
       </fieldset>
       <fieldset>
+        <legend>Mise en avant</legend>
+        <div class="row">
+          <div class="columns medium-4 large-3">
+            <label for="color-menu-featured-background">Fond Menu</label>
+            <input name="admin_theme_settings[color-menu-featured-background]" id="color-menu-featured-background" value="{{ theme_settings.color-menu-featured-background }}" type="text" class="minicolors">
+          </div>
+        </div>
+      </fieldset>
+      <fieldset>
         <legend>Formulaires</legend>
         <div class="row">
           <div class="columns medium-4 large-3">
