--- a/dev/scss/components/_simple-bloc.scss
+++ b/dev/scss/components/_simple-bloc.scss
@@ -3,7 +3,8 @@
 }
 .c-simple-bloc__title {
 }
-.c-simple-bloc__text {
+.c-simple-bloc__content {
 }
 .c-simple-bloc__button {
+  text-align: center;
 }
