--- a/snippets/menu.liquid
+++ b/snippets/menu.liquid
@@ -1,43 +1,45 @@
-<div class="menu {% if menu.featured %} menu--featured {% endif %}" id="menu-{{menu.id}}">
+<div class="c-menu {% if menu.featured %} c-menu--featured {% endif %}" id="menu-{{menu.id}}">
+
   {% if menu.main_image? %}
-    {{ menu.main_image | custom_image_url: '1920x590#' | image_tag:'class: menu__image' }}
+    {{ menu.main_image | custom_image_url: '1920x590#' | image_tag:'class: c-menu__image' }}
   {% endif %}
+
   {% if menu.depth == 1 %}
     <div class="o-wrapper">
   {% endif %}
+
   {% if title == true %}
-    <div class="menu__header">
-      <h{{ menu.depth | plus: 1 }} class="menu__title">
-        {{ menu.name }}
-      </h{{ menu.depth | plus: 1 }}>
-    </div>
+    <h{{ menu.depth | plus: 1 }} class="c-menu__title">
+      {{ menu.name }}
+    </h{{ menu.depth | plus: 1 }}>
+    {% if menu.summary? %}
+      <div class="c-menu__description">
+        {{ menu.summary }}
+      </div>
+    {% endif %}
   {% endif %}
-  {% if menu.summary? %}
-    <div class="menu__description">
-      {{ menu.summary }}
-    </div>
-  {% endif %}
+
   {% if menu.foods? %}
     {% for food in menu.foods %}
       {% assign_prices_to prices for food in menu %}
       {% include 'food' with food:food, menu:menu %}
     {% endfor %}
   {% endif %}
+
   {% if menu.children? %}
     {% for child in menu.children %}
       {% include 'menu' with menu:child %}
     {% endfor %}
   {% endif %}
+
   {% if menu.depth == 1 %}
-    <div class="c-back-to-top">
-      <a class="c-back-to-top__link" href="#top">
-        <span class="c-back-to-top__label">
-          {{ "Retour au menu" | t }}
-        </span>
-      </a>
-    </div>
-  {% endif %}
-  {% if menu.depth == 1 %}
+      <div class="c-back-to-top">
+        <a class="c-back-to-top__link" href="#top">
+          <span class="c-back-to-top__label">
+            {{ "Retour au menu" | t }}
+          </span>
+        </a>
+      </div>
     </div>
   {% endif %}
 </div>
