--- a/templates/restaurant.liquid
+++ b/templates/restaurant.liquid
@@ -2,7 +2,7 @@
   <div class="o-wrapper">
     <section class="c-simple-bloc">
       <h1 class="c-simple-bloc__title">{{ "Le restaurant" | t }}</h1>
-      <div class="c-simple-bloc__text">
+      <div class="c-simple-bloc__content">
         {{ restaurant.summary }}
       </div>
     </section>
