--- a/templates/menu.liquid
+++ b/templates/menu.liquid
@@ -1,36 +1,34 @@
-<section class="page-header page-header--menu">
-  <div class="o-wrapper">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ menu.name }}</h1>
-      {% if menu.children? %}
-        <ul class="menu-children">
-          {% for child in menu.children %}
-            <li class="menu-child">
-              <a href="#menu-{{child.id}}" class="menu-child__link">
-                {% if child.main_image? %}
-                  {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:menu-child__image" }}
-                {% else %}
-                  {{ 'fallback-image.gif' | asset_url | image_tag: 'alt:menus', 'class:anchor-image', 'width:100' }}
-                {% endif %}
-                <span class="menu-child__title">{{ child.name}}</span>
-              </a>
-            </li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-    </header>
+<div class="o-wrapper">
+  <section class="c-menu-preview">
+    <h1 class="c-menu-preview__title">{{ menu.name }}</h1>
+    {% if menu.children? %}
+      <ul class="c-menu-preview__children">
+        {% for child in menu.children %}
+          <li class="c-menu-preview__child">
+            <a href="#menu-{{child.id}}" class="c-menu-preview__child-link">
+              {% if child.main_image? %}
+                {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:c-menu-preview__child-image" }}
+              {% else %}
+                {{ 'fallback-image.gif' | asset_url | image_tag: 'alt:menus', 'class:c-menu-preview__anchor-image', 'width:100' }}
+              {% endif %}
+              <span class="c-menu-preview__child-title">{{ child.name}}</span>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
     {% if menu.summary? %}
-      <div class="section__main page-header__description">
+      <div class="c-menu-preview__summary">
         {{ menu.summary }}
       </div>
     {% endif %}
-  </div>
-</section>
+  </section>
+</div>
 
 {% if menu.children? %}
   {% for child in menu.children %}
     {% include 'menu' with menu:child, title:true %}
   {% endfor %}
 {% else %}
-  {% include 'menu' with menu:menu, title:true %}
+  {% include 'menu' with menu:menu, title:false %}
 {% endif %}
