--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -1,41 +1,34 @@
-<section class="page-header page-header--menus">
-  <div class="o-wrapper">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ "Notre carte" | t }}</h1>
-    </header>
-  </div>
-</section>
-
-<section class="menus">
-  <div class="o-wrapper">
-    {% for menu in menus %}
-      <header class="section__header">
-        <h2 class="section__title">
-          <a class="menus__menu-link" href="{{ menu.url }}">{{ menu.name }}</a>
-        </h2>
-      </header>
-      <div class="section__main">
-        <ul class="menu-children">
-          {% for child in menu.children %}
-            <li class="menu-child">
-              <a href="{{ menu.url }}#menu-{{child.id}}" class="menu-child__link">
-                {% if child.main_image? %}
-                  {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:menu-child__image" }}
-                {% else %}
-                  {{ 'fallback-image.gif' | asset_url | image_tag: 'alt:menus', 'class:anchor-image', 'width:100' }}
-                {% endif %}
-                <span class="menu-child__title">{{ child.name}}</span>
-              </a>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-      <footer class="section__main menus__footer">
-        <p>
-          <a class="o-button o-button--red" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
-        </p>
-      </footer>
-      <hr class="menus__separator">
-    {% endfor %}
-  </div>
-</section>
+<div class="o-wrapper">
+  <section class="c-simple-bloc">
+    <h1 class="c-simple-bloc__title">{{ "Notre carte" | t }}</h1>
+    <div class="c-simple-bloc__content">
+      {% for menu in menus %}
+        <div class="c-menu-preview">
+          <a class="c-menu-preview__link" href="{{ menu.url }}">
+            <h2 class="c-menu-preview__title">{{ menu.name }}</h2>
+          </a>
+          <ul class="c-menu-preview__children">
+            {% for child in menu.children %}
+              <li class="c-menu-preview__child">
+                <a href="{{ menu.url }}#menu-{{child.id}}" class="c-menu-preview__child-link">
+                  {% if child.main_image? %}
+                    {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:c-menu-preview__child-image" }}
+                  {% else %}
+                    {{ 'fallback-image.gif' | asset_url | image_tag: 'alt:menus', 'class:c-menu-preview__anchor-image', 'width:100' }}
+                  {% endif %}
+                  <span class="c-menu-preview__child-title">{{ child.name}}</span>
+                </a>
+              </li>
+            {% endfor %}
+          </ul>
+          <div class="c-menu-preview__button">
+            <a class="o-button o-button--red" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
+          </div>
+          {% unless forloop.last %}
+            <hr class="c-menu-preview__separator">
+          {% endunless %}
+        </div>
+      {% endfor %}
+    </div>
+  </section>
+</div>
