--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -8,7 +8,7 @@
     </div>
 
     <div class="c-simple-bloc__button">
-      <a class="o-button o-button--red" href="{{ restaurant.root_path }}">
+      <a class="o-button o-button--red" href="{{ localized_root_path }}">
         {{ "Retour à l'accueil" | t }}
       </a>
     </div>
