refactor food component

--- a/config/settings.html.liquid
+++ b/config/settings.html.liquid
@@ -51,6 +51,10 @@
             <label for="color-menu-featured-background">Fond Menu</label>
             <input name="admin_theme_settings[color-menu-featured-background]" id="color-menu-featured-background" value="{{ theme_settings.color-menu-featured-background }}" type="text" class="minicolors">
           </div>
+          <div class="columns medium-4 large-3 end">
+            <label for="color-food-featured-background">Fond Plat</label>
+            <input name="admin_theme_settings[color-food-featured-background]" id="color-food-featured-background" value="{{ theme_settings.color-food-featured-background }}" type="text" class="minicolors">
+          </div>
         </div>
       </fieldset>
       <fieldset>
@@ -98,6 +102,14 @@
       <fieldset>
         <legend>Etiquettes</legend>
         <div class="row">
+          <div class="columns medium-4 large-3">
+            <label for="color-default-tag-background">Default (fond)</label>
+            <input name="admin_theme_settings[color-default-tag-background]" id="color-default-tag-background" value="{{ theme_settings.color-default-tag-background }}" type="text" class="minicolors">
+          </div>
+          <div class="columns medium-4 large-3">
+            <label for="color-default-tag-text">Default (text)</label>
+            <input name="admin_theme_settings[color-default-tag-text]" id="color-default-tag-text" value="{{ theme_settings.color-default-tag-text }}" type="text" class="minicolors">
+          </div>
           {% for tag in tags %}
             <div class="columns medium-4 large-3">
               <label for="label-{{ tag.css_class }}-background">{{ tag.name }} (fond)</label>
