--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -16,7 +16,6 @@
       <h1 class="c-simple-bloc__title">
         {% if current_locale == 'fr' %}{{ theme_settings.home_menus_featured_text_fr | t }}{% else %}{{ theme_settings.home_menus_featured_text_en | t }}{% endif %}
       </h1>
-
       <div class="c-simple-bloc__content">
         {% for menu in home_menus %}
           <div class="c-menu">
@@ -33,7 +32,6 @@
           </div>
         {% endfor %}
       </div>
-
       <div class="c-simple-bloc__button">
         <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
           {{ "Voir toute la carte" | t }}
@@ -44,25 +42,23 @@
 {% endif %}
 
 {% if home_foods.size > 0 %}
-  <section class="foods foods--featured">
-    <div class="o-wrapper">
-      <header class="section__header">
-        <h2 class="section__title">{% if current_locale == 'fr' %}{{ theme_settings.home_foods_featured_text_fr | t }}{% else %}{{ theme_settings.home_foods_featured_text_en | t }}{% endif %}</h2>
-      </header>
-      <div class="section__main">
+  <div class="o-wrapper">
+    <section class="c-simple-bloc">
+      <h1 class="c-simple-bloc__title">
+        {% if current_locale == 'fr' %}{{ theme_settings.home_foods_featured_text_fr | t }}{% else %}{{ theme_settings.home_foods_featured_text_en | t }}{% endif %}
+      </h1>
+      <div class="c-simple-bloc__content">
         {% for food in home_foods %}
           {% include 'food' with food:food %}
         {% endfor %}
       </div>
-      <footer class="section__footer foods__footer">
-        <p>
-          <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
-            {{ "Voir toute la carte" | t }}
-          </a>
-        </p>
-      </footer>
-    </div>
-  </section>
+      <div class="c-simple-bloc__button">
+        <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
+          {{ "Voir toute la carte" | t }}
+        </a>
+      </div>
+    </section>
+  </div>
 {% endif %}
 
 {% if theme_settings.home_display_news %}
