--- a/snippets/food.liquid
+++ b/snippets/food.liquid
@@ -1,33 +1,38 @@
-<div class="food {% if food.featured_in_menu? %}food--featured{% endif %} {{food.auto_css_classes}}" id="food-{{food.id}}">
+<div class="c-food {% if food.featured_in_menu? %}c-food--featured{% endif %} {{ food.auto_css_classes }}" id="food-{{food.id}}">
+
   {% if food.main_image? %}
-    {{ food.main_image | custom_image_url:'100x100#' | image_tag:'class:food__image circle' }}
+    {{ food.main_image | custom_image_url:'100x100#' | image_tag:'class:c-food__img' }}
   {% endif %}
-  <div class="food__body">
-    <h5 class="food__title">
+
+  <div class="c-food__body">
+    <h5 class="c-food__title">
       {% if food.featured_in_menu? %}
         <i class="icon icon-star"></i>
       {% endif %}
       {{ food.name }}
-    </h3>
+    </h5>
+
     {% if food.tags? %}
-      <div class="food__tags">
+      <div class="c-food__tags">
         {% for tag in food.tags %}
-          <i class="tag tag--{{ tag.css_class }}">{{ tag.name }}</i>
+          <i class="c-food__tag tag--{{ tag.css_class }}">{{ tag.name }}</i>
         {% endfor %}
       </div>
     {% endif %}
+
     {% if food.summary? %}
-      <div class="food__summary">
+      <div class="c-food__summary">
         {{ food.summary }}
       </div>
     {% endif %}
+
     {% if prices.size > 0 %}
-      <div class="food__prices">
-        <ul class="prices">
+      <div class="c-food__prices">
+        <ul class="c-food__prices-items">
           {% for price in prices %}
-          <li class="price">
-            <span class="price__label">{{ price.title }}</span>
-            <span class="price__value">{{ price.amount | money }}</span>
+          <li class="c-food__prices-item">
+            <span class="c-food__prices-label">{{ price.title }}</span>
+            <span class="c-food__prices-value">{{ price.amount | money }}</span>
           </li>
           {% endfor %}
         </ul>
@@ -36,4 +41,4 @@
   </div>
 </div>
 
-<hr class="food__separator">
+<hr class="c-food__separator">
