--- a/dev/scss/base/_document.scss
+++ b/dev/scss/base/_document.scss
@@ -1,4 +1,29 @@
+html,
 body {
   color: $body-color;
   background-color: $body-background;
+  font-size: 14px;
+  line-height: 1.6;
+  font-family: $bodyFontStack;
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  @include media-query($min, $small) {
+    font-size: 16px;
+  }
+  @include media-query($min, $medium) {
+    font-size: 18px;
+  }
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $headerFontStack;
+}
+
+// Pixel to EM conversion tool http://pxtoem.com/
+h1 { font-size: 2.5em; }
+h2 { font-size: 2em; }
+h3 { font-size: 1.5em; }
+h4 { font-size: 1.25em; }
+h5 { font-size: 1em; }
+h6 { font-size: .9em; }
