--- a/dev/scss/base/_document.scss
+++ b/dev/scss/base/_document.scss
@@ -27,3 +27,22 @@ h3 { font-size: 1.5em; }
 h4 { font-size: 1.25em; }
 h5 { font-size: 1em; }
 h6 { font-size: .9em; }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+ul, ol {
+  margin-bottom: 1em;
+}
+ul {
+  list-style: none outside;
+}
+ol {
+  list-style: decimal;
+  margin-left: 1em;
+}
+li {
+  margin-bottom: 0.25em;
+}
